# ludus-ai-3d-asset-generator

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/prompts/: project-context.prompt.md
.github/workflows/: build-docker.yml
config/: development.yaml  docker.yaml  production.yaml  staging.yaml
examples/: config_usage_example.py
src/: main.py  main_backup.py
src/core/: __init__.py  app.py  cache_manager.py  generation_pipeline.py  session_manager.py  task_manager.py
src/factories/: asset_generator_factory.py  llm_factory.py  storage_factory.py
src/generators/: __init__.py  asset_generator.py  base.py  base_integration.py  configs.py  enums.py  llm_generator.py  meshy_integration.py  models.py
src/models/: asset_model.py
src/storage/: __init__.py  cloud_storage.py  file_utils.py  s3_storage.py
src/ui/: __init__.py  app.py  components.py  components_original.py  components_simple.py  gradio_app.py  handlers.py  interface.py  preview.py  styles.py  unified_interface.py  utils.py
src/utils/: config.py  config_init.py  env_config.py  validators.py
src/web/: __init__.py
test/: conftest.py  test_cache_manager.py  test_core.py  test_env_config.py  test_factories.py  test_generation_pipeline.py  test_models.py  test_session_manager.py  test_task_manager.py  test_validators.py
