[project]
name = "ludus-ai-3d-asset-generator"
version = "0.1.0"
description = "AI-powered 3D asset generator from text descriptions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=23.0.0",
    "aiohttp>=3.12.13",
    "anthropic>=0.7.0",
    "asyncpg>=0.28.0",
    "boto3==1.35.99",
    "botocore>=1.29.0",
    "gradio~=5.35.0",
    "httpx>=0.24.0",
    "openai>=1.0.0",
    "pillow>=10.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.0",
    "structlog>=23.0.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "mypy>=1.15.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.5",
    "ruff>=0.9.10",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.ruff]
line-length = 120
output-format = "full"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
target-version = "py313"

[tool.ruff.lint]
select = [
    "A",
    "B",
    "C4",
    "E",
    "F",
    "I001",
    "SIM",
    "T201",
    "UP",
]
ignore = ["E501", "B008"]
unfixable = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false


[tool.pytest]
python_files = "tests.py test_*.py *_tests.py"
norecursedirs = ".git .env venv"


[tool.mypy]
python_version = "3.13"
show_error_codes = true
strict = true
disallow_untyped_calls = false
disallow_any_generics = false
warn_return_any = false
ignore_missing_imports = true
disable_error_code = "abstract"



[tool.bandit]
exclude_dirs = ['test/*']


[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src/"]
omit = [
    "**/__init__.py",
]
relative_files = true

[tool.coverage.report]
show_missing = true
